2005-02-28
        * Numbers_Words: Version 0.13.0 released.
	* support for a new currency ILS (or NIS) for New Israeli Sheqel

2005-02-15
        * Words/lang.cs.php: New language file: cs for Czech (Thanks to Petr 'PePa' Pavel)

2005-02-03
        * Words/lang.he.php: New language file: he for Hebrew (Thanks to Hadar Porat)

2005-01-11
	* Numbers_Words: Version 0.12.0 released.
	* Words/lang.fr_BE.php: New language file: fr_BE for French (Belgium) (Thanks to Philippe Bajoit).

2004-10-25
	* Fixed spell mistake in some files - Britich to British (Thanks to Christian Weiske)

2004-10-22
	* Numbers_Words: Version 0.11.0 released.
	* Words/lang.pt_BR.php: toCurrencyWords() support in pt_BR translation (Thanks to Mario H.C.T).

2004-09-30
	* Numbers_Words: Version 0.10.1 released.
	* Words/lang.de.php: Small bug fix to German translation (the one thousand) (Thanks to neuner at futureweb dot at for the fix).
	* tests/test-numbers-words.php: Changed test number.

2004-09-20
	* Numbers_Words: Version 0.10.0 released.
	* Words/lang.dk.php: New language file: dk for Danish (Author: Jesper Veggerby)

2004-08-26
	* Numbers_Words: Version 0.9.0 released.
	* Words/lang.hu_HU.php: New language file: hu_HU for Hungarian (Author: Nils Homp)
	* Words/lang.id.php: Updating author list of the Indonesian translation (Arif Rifai Dwiyanto translated
	into Indonesian first but I missed his file by mistake).

2004-08-09
	* Numbers_Words: Version 0.8.1 released.
	* Words/lang.ru.php: fixed two bugs (missing t in 400, and wrong function call) in Russian translation (thanks
	to Anton Funk and igorag for reporting, and Andrey Demenev for fixing)

2004-06-17
	* Numbers_Words: Version 0.8 released.
	* Words/lang.lt.php: New file for Lithuanian language.
	* Words.php: Fixed a class method finding (should work for PHP5 and PHP4 now)

2004-05-25
	* Numbers_Words: Version 0.7.1 released.
	* Words.php: Small fix for PHP 5 support (toWords instead of towords) (Thanks to khlo for bug report).
