@@ -1,3 +1,7 @@
+2005-03-09
+        * Numbers_Words: Version 0.13.1 released.
+        * Words.php: Fixed a problem with no leading zero in fraction of the currency value (reported by geekdom at gmail dot com).
+
 2005-02-28
         * Numbers_Words: Version 0.13.0 released.
 	* support for a new currency ILS (or NIS) for New Israeli Sheqel
